--- a/challenge3/webapp/masuda/web/config/database.yml
+++ b/challenge3/webapp/masuda/web/config/database.yml
@@ -5,21 +5,24 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
+  username: postgres
+  password: password
+  host: localhost
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: graph
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: graph
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: graph
