--- a/challenge3/webapp/masuda/web/Gemfile
+++ b/challenge3/webapp/masuda/web/Gemfile
@@ -16,7 +16,7 @@ gem 'puma', '~> 3.11'
 # gem 'redis', '~> 4.0'
 # Use Active Model has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
-
+gem 'rack-cors'
 # Use Active Storage variant
 # gem 'image_processing', '~> 1.2'
 
