--- a/challenge3/webapp/masuda/front/package.json
+++ b/challenge3/webapp/masuda/front/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "highcharts": "^7.2.0",
+    "highcharts-vue": "^1.3.5",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
