--- a/challenge3/webapp/yukio_ugajin/Gemfile
+++ b/challenge3/webapp/yukio_ugajin/Gemfile
@@ -28,7 +28,7 @@ gem 'bootsnap', '>= 1.4.2', require: false
 
 group :development, :test do
   # Use sqlite3 as the database for Active Record
-  gem 'sqlite3', '1.3.13'
+  gem 'sqlite3', '~> 1.4'
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
 end
