--- a/challenge3/webapp/shimada/package.json
+++ b/challenge3/webapp/shimada/package.json
@@ -1,5 +1,8 @@
 {
   "name": "shimada",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "admin-lte": "3.0.0",
+    "highcharts": "^7.2.1"
+  }
 }
