--- a/challenge3/webapp/keita_eguchi/Gemfile
+++ b/challenge3/webapp/keita_eguchi/Gemfile
@@ -60,3 +60,6 @@ end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+gem 'gon'
+gem 'rubocop', require: false
+gem 'jquery-rails'
