--- a/challenge3/webapp/takuya_kikuchi/Gemfile
+++ b/challenge3/webapp/takuya_kikuchi/Gemfile
@@ -28,6 +28,10 @@ gem 'jbuilder', '~> 2.7'
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.2', require: false
 
+# Added additionally
+gem 'chart-js-rails'
+gem 'gon', '~> 6.3', '>= 6.3.2'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
