--- a/challenge3/webapp/yoshikawa_keishi/package.json
+++ b/challenge3/webapp/yoshikawa_keishi/package.json
@@ -6,6 +6,12 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "bootstrap": "^4.4.1",
+    "bootstrap-material-design": "^4.1.2",
+    "chart.js": "^2.9.3",
+    "chartkick": "^3.2.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
