--- a/challenge3/webapp/yoshikawa_keishi/Gemfile
+++ b/challenge3/webapp/yoshikawa_keishi/Gemfile
@@ -58,3 +58,5 @@ end
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem "chartkick"
 gem 'pry-rails'
+gem 'rspec-rails'
+gem 'factory_bot_rails'
